adds com and fixed linux flavour fetching